--- a/MatroskaLib/MatroskaLib/MatroskaLib.csproj
+++ b/MatroskaLib/MatroskaLib/MatroskaLib.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NEbml" Version="0.11.0" />
+    <PackageReference Include="NEbml" Version="0.11.0"/>
   </ItemGroup>
 
 </Project>
