--- a/MkvDefaultTrackChanger/MkvDefaultTrackChanger/MkvDefaultTrackChanger.csproj
+++ b/MkvDefaultTrackChanger/MkvDefaultTrackChanger/MkvDefaultTrackChanger.csproj
@@ -2,11 +2,14 @@
 	
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <NoWarn>CS8618;CS0649</NoWarn>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.7.4" />
-    <PackageReference Include="Eto.Serialization.Xaml" Version="2.7.4" />
+    <PackageReference Include="Eto.Forms" Version="2.7.5" />
+    <PackageReference Include="Eto.Serialization.Xaml" Version="2.7.5" />
   </ItemGroup>
   
   <ItemGroup>
