Add unit test for MkvFile ToString + improve code a little

--- a/MatroskaLib/MatroskaLib.Test/MatroskaLib.Test.csproj
+++ b/MatroskaLib/MatroskaLib.Test/MatroskaLib.Test.csproj
@@ -54,5 +54,8 @@
   <ItemGroup>
     <ProjectReference Include="..\MatroskaLib\MatroskaLib.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage" />
+  </ItemGroup>
 
 </Project>
