--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,6 +7,7 @@ on:
     - 'MatroskaLib/**'
     - 'MkvDefaultTrackChanger/**'
     - 'TestMkvFiles/**'
+    - '.github/workflows/build-and-test.yml'
   pull_request:
     branches: [ main, develop ]
 
