Add mkvalidator.exe to test project

--- a/MatroskaLib/MatroskaLib.Test/MatroskaLib.Test.csproj
+++ b/MatroskaLib/MatroskaLib.Test/MatroskaLib.Test.csproj
@@ -57,5 +57,10 @@
   <ItemGroup>
     <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="mkvalidator.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
 
 </Project>
