--- a/MatroskaLib/MatroskaLib.Test/MatroskaLib.Test.csproj
+++ b/MatroskaLib/MatroskaLib.Test/MatroskaLib.Test.csproj
@@ -31,23 +31,26 @@
   <ItemGroup>
     <Content Include="..\..\TestMkvFiles\mkv files\TestFile1_MkvToolNix.mkv">
       <Link>mkv files\TestFile1_MkvToolNix.mkv</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\TestMkvFiles\mkv files\TestFile2_MkvToolNix.mkv">
       <Link>mkv files\TestFile2_MkvToolNix.mkv</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\TestMkvFiles\mkv files\TestFile3_HandBrake.mkv">
       <Link>mkv files\TestFile3_HandBrake.mkv</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\TestMkvFiles\mkv files\TestFile4_MkvProEdit.mkv">
       <Link>mkv files\TestFile4_MkvProEdit.mkv</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="..\..\TestMkvFiles\mkv files\TestFile5_MkvProEdit.mkv">
       <Link>mkv files\TestFile5_MkvProEdit.mkv</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="mkvalidator.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
@@ -56,11 +59,6 @@
   </ItemGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="mkvalidator.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
   </ItemGroup>
 
 </Project>
