--- a/MkvDefaultTrackChanger/MkvDefaultTrackChanger/MkvDefaultTrackChanger.csproj
+++ b/MkvDefaultTrackChanger/MkvDefaultTrackChanger/MkvDefaultTrackChanger.csproj
@@ -5,6 +5,7 @@
     <NoWarn>CS8618;CS0649</NoWarn>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Nullable>enable</Nullable>
+    <Version>1.1.0</Version>
   </PropertyGroup>
   
   <ItemGroup>
@@ -14,6 +15,12 @@
   
   <ItemGroup>
     <ProjectReference Include="../../MatroskaLib\MatroskaLib\MatroskaLib.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="logo.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   
 </Project>
