--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,10 +44,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: V${{ github.event.inputs.version }}
-        release_name: V${{ github.event.inputs.version }}
+        release_name: ${{ github.event.inputs.version }}
         body: TODO add description and rebuild MacOS locally
         draft: true
-        prerelease: true
+        prerelease: false
     - name: Upload release Windows
       uses: actions/upload-release-asset@v1.0.1
       env:
