--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,7 +44,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: V${{ github.event.inputs.version }}
-        release_name: ${{ github.event.inputs.version }}
+        release_name: v${{ github.event.inputs.version }}
         body: TODO add description and rebuild MacOS locally
         draft: true
         prerelease: false
